# Modeling-Unknown-Stochastic-Dynamical-System-via-Autoencoder

./: .gitignore  5DOU_plot.py  DEAE_lib.py  DEAE_network.py  DEAE_train.py  DEVAE_network.py  DEVAE_test.py  Evaulation.py  Ex10SO.py  Ex11OU5D.py  Ex12OU5D5.py  Ex13OU5D1.py  Ex14OU5D2.py  Ex15OU5D4.py  Ex1GeoBrownian.py  Ex3OU.py  Ex4ExpDiff.py  Ex5Trig.py  Ex6ExpOU.py  Ex7OU2D.py  Ex8DoubleWell.py  Ex9Expdis.py  README.md  check.py  pyproject.toml  util.py
configs/: Ex4-1-1.json  Ex4-1-2.json  Ex4-2-1.json  Ex4-2-2.json  Ex4-2-3.json  Ex4-3-1.json  Ex4-3-2.json  Ex4-4-1.json  Ex4-4-2.json
data_generation/: data_generate.py
jsons/: Ex11OU5D.json  Ex12OU5D5.json  Ex13OU5D1.json  Ex14OU5D2.json  Ex15OU5D4.json  Ex16lorenz3d.json  Ex1GeoBrownian.json  Ex3OU.json  Ex4ExpDiff.json  Ex5Trig.json  Ex6ExpOU.json  Ex7OU2D.json  Ex8DoubleWell.json  Ex9Expdis.json
