[tool.poetry]
name = "DEAE4SDE"
version = "0.1.0"
description = "Code for the paper Modeling Unknown Stochastic Dynamical System via Autoencoder"
authors = ["Zhongshu Xu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
munch = "^4.0.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
